# xml-disassembler-rust

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  test_parse.rs
.cargo-husky/hooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  release-plz.yml
fixtures/comments/: Numbers-fr.globalValueSetTranslation-meta.xml
src/: cli.rs  constants.rs  lib.rs  main.rs  multi_level.rs  types.rs
src/builders/: build_disassembled_file.rs  build_disassembled_files.rs  build_xml_string.rs  extract_root_attributes.rs  merge_xml_elements.rs  mod.rs
src/handlers/: disassemble.rs  mod.rs  reassemble.rs
src/parsers/: mod.rs  parse_element.rs  parse_to_xml_object.rs  parse_unique_id.rs  parse_xml.rs  parse_xml_cdata.rs  strip_whitespace.rs
src/transformers/: formats.rs  get_transformer.rs  mod.rs  transformers.rs
src/utils/: async_queue.rs  mod.rs  path.rs
tests/: disassemble_reassemble.rs
