[package]
name = "xml-disassembler"
version = "0.1.0"
edition = "2021"
description = "Disassemble large XML files into smaller files and reassemble the original XML."
repository = "https://github.com/mcarvin8/xml-disassembler-rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
ignore = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
regex = "1"
json5 = "1.3"

[dev-dependencies]
tempfile = "3"
